edit css and html files

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Index</title>
   </head>
+
   <body>
     <main>
-      <h1>Index</h1>
+      <div class="container">
+        <h1>Recipes</h1>
+        <ol>
+          <li>
+            <a href="./recipes/lasagna.html">Lasagna</a>
+          </li>
+          <li>
+            <a href="./recipes/pizza.html">Pizza</a>
+          </li>
+          <li>
+            <a href="./recipes/spaghetti.html">Spaghetti</a>
+          </li>
+        </ol>
+      </div>
     </main>
-    <footer>
-      <ol>
-        <li>
-          <a href="./recipes/lasagna.html">Lasagna</a>
-        </li>
-        <li>
-          <a href="./recipes/pizza.html">Pizza</a>
-        </li>
-        <li>
-          <a href="./recipes/spaghetti.html">Spaghetti</a>
-        </li>
-      </ol>
-    </footer>
   </body>
 </html>
